# fame-events

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
cmd/event/: BUILD.bazel  main.go
pkg/: BUILD.bazel  event_scheduler.go  group_stage.go  group_stage_test.go  match_result.go  play_off_optimizer.go  ranking.go  team.go  team_placement.go  team_stats.go  tiebreaker.go  tiebreaker_test.go
pkg/config/: BUILD.bazel  config.go  group_stage_config.go  playoff_config.go
pkg/event/: BUILD.bazel  event_scheduler.go  group_stage.go  group_stage_test.go  match_result.go  play_off_optimizer.go  ranking.go  team.go  team_placement.go  team_stats.go  tiebreaker.go  tiebreaker_test.go
pkg/service/: BUILD.bazel  schedule_event.go  service.go
pkg/tournament/: BUILD.bazel  event_scheduler.go  group_stage.go  group_stage_test.go  match_result.go  play_off_optimizer.go  ranking.go  team.go  team_placement.go  team_stats.go  tiebreaker.go  tiebreaker_test.go
proto/: BUILD.bazel  event.proto
