load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "event_lib",
    srcs = ["main.go"],
    importpath = "github.com/relrin/fame-events/cmd/event",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/service",
        "//proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "event",
    embed = [":event_lib"],
    visibility = ["//visibility:public"],
)
