load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "event",
    srcs = [
        "event_scheduler.go",
        "group_stage.go",
        "match_result.go",
        "play_off_optimizer.go",
        "ranking.go",
        "team.go",
        "team_placement.go",
        "team_stats.go",
        "tiebreaker.go",
    ],
    importpath = "github.com/relrin/fame-events/pkg/event",
    visibility = ["//visibility:public"],
)

go_test(
    name = "event_test",
    srcs = [
        "group_stage_test.go",
        "tiebreaker_test.go",
    ],
    embed = [":event"],
    deps = ["@com_github_stretchr_testify//assert"],
)
